force-app/main/default/staticresources/python/Disappear/src/objects/PubEvent__c.object
<CustomObject>
    <description>An READONLY Audit log of activities related to a Publication

Users should never be able to edit this.</description>
    <fields>
        <fullName>Appear_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appear Role</label>
        <referenceTo>Appear_Role__c</referenceTo>
        <relationshipName>PubEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPR_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FPR_Cycle</label>
        <referenceTo>FPR_Cycle__c</referenceTo>
        <relationshipName>PubEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>Journal__c</referenceTo>
        <relationshipName>PubEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MEScopeOfWork__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MEScopeOfWork</label>
        <referenceTo>MEScopeOfWork__c</referenceTo>
        <relationshipName>PubEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipName>PubEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PubReviewTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PubReviewTeamMember</label>
        <referenceTo>PubReviewTeam__c</referenceTo>
        <relationshipName>PubEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PubStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PubStatus</label>
        <referenceTo>PubStatus__c</referenceTo>
        <relationshipName>PubEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicationTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PublicationTeamMember</label>
        <referenceTo>PublicationTeamMember__c</referenceTo>
        <relationshipName>PubEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipName>PubEvents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission Cycle</label>
        <referenceTo>SubmissionCycle__c</referenceTo>
        <relationshipName>Pub_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Publication Event</label>
    <nameField>
        <displayFormat>PubE-{000000000}</displayFormat>
        <label>PubEventId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>